# ree-v1-minimal

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  experiment_queue.json  experiment_runner.py  pyproject.toml
.github/workflows/: validate-experiment-pack.yml
contracts/: ree_assembly_contract_lock.v1.json
docs/: CONTRIBUTING.md  README.md  advanced-usage.md  api-reference.md  architecture.md  configuration.md  getting-started.md  quick-reference.md  troubleshooting.md
evidence/experiments/candidate_count_ablation/: candidate_count_ablation_20260228T162923.json
evidence/planning/: weekly_handoff_current.md
examples/: basic_agent.py  residue_visualization.py
experiments/: candidate_count_ablation.py  commitment_boundary_validation.py  consolidation_ablation.py  control_completion_requirement.py  control_plane_precision_separation.py  e1_e2_associative_transition.py  e1_e2_timescale_ablation.py  metrics.py  multistep_control_completion.py  pack_writer.py  residue_trajectory_placement.py  residue_weight_sensitivity.py  run.py  suites.json  training_run.py  write_locus_contamination.py
ree_core/: __init__.py  agent.py  flags.py  invariants.py
ree_core/environment/: __init__.py  grid_world.py
ree_core/latent/: __init__.py
ree_core/predictors/: __init__.py  e1_deep.py  e2_fast.py
ree_core/residue/: __init__.py  field.py
ree_core/training/: __init__.py  trainer.py
ree_core/trajectory/: __init__.py  e3_selector.py
ree_core/utils/: __init__.py  config.py
scripts/: check_bridging_seed_determinism.py  generate_weekly_handoff.py  generate_weekly_handoff_report.py  run_dispatch_claim_probes.py  run_mech_058_059_060_qualification.py  validate_experiment_packs.py  validate_weekly_handoff.py  validate_weekly_handoff_report.py
tests/: __init__.py  test_agent.py  test_environment.py  test_experiment_pack.py  test_latent_stack.py  test_predictors.py  test_residue.py  test_training.py  test_trajectory.py
(+47 files in other folders)
